hsl card working but bugs on tablet version

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,6 @@ nav h1
 main
 {
     background-color: var(--main-bg);
-    
 }
 
 .button-reset
@@ -63,7 +62,7 @@ main
     padding: 1rem;
     width: 100%;
     display: grid;
-    grid-template-rows: repeat(100, 25px);
+    grid-template-rows: repeat(78, 25px);
     grid-template-columns: repeat(75, 25px);
     border-radius: 5px;
 }
@@ -730,6 +729,7 @@ canvas
     border-radius: 5px;
     border: 2px solid var(--main-border-colour);
     background-color: #212529;
+    cursor: pointer;
 }
 
 .colour-hue-hsl
@@ -784,10 +784,21 @@ canvas
     color: white;
 }
 
+.palettes-section
+{
+    padding: 1rem;
+    display: flex;
+    width: 100%;
+    flex-flow: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 25px;
+}
+
 .palettes-header
 {
-    grid-row: 79/81;
-    grid-column: 1/12;
+    width: 225px;
+    height: 50px;
     background-color: var(--main-ui-colour);
     color: white;
     font-weight: bold;
@@ -800,8 +811,7 @@ canvas
 
 .palettes-container
 {
-    grid-row: 82/99;
-    grid-column: 1/53;
+    width: 90%;
     background-color: var(--main-ui-colour);
     border-radius: 5px;
     display: flex;
@@ -886,7 +896,7 @@ canvas
     width: 80%;
     margin: auto;
     display: grid;
-    grid-template-rows: repeat(175, 25px);
+    grid-template-rows: repeat(118, 25px);
     grid-template-columns: repeat(60, 25px);
 }
 
@@ -1066,20 +1076,25 @@ canvas
     border-radius: 0 0 5px 5px;
 }
 
-.palettes-header
+.colour-range-container
 {
-    grid-row: 98/100;
-    grid-column: 1/12;
-    
+    grid-row: 98/118;
+    grid-column: 1/32;
+    grid-template-rows: repeat(20, 25px);
+    grid-template-columns: repeat(32, 25px);
 }
 
+.palettes-section
+{
+    padding: 1rem;
+    width: 80%;
+    margin: auto;
+}
 .palettes-container
 {
-    grid-row: 101/150;
-    grid-column: 5/28;
-    display: flex;
+    width: 70%;
+    align-self: center;
     justify-content: center;
-    align-items: center;
 }
 
 
@@ -1091,9 +1106,10 @@ canvas
     padding: 1.2rem;
     width: 100%;
     display: grid;
-    grid-template-rows: repeat(168, 25px);
+    grid-template-rows: repeat(120, 25px);
     grid-template-columns: repeat(60, 25px);
 }
+
 } 
 
 /* Small tablets and large Phones */
@@ -1101,10 +1117,10 @@ canvas
 .grid
 {
     padding: 1.2rem;
-    width: 50%;
+    width: 54%;
     margin: auto;
-    grid-template-rows: repeat(202, 25px);
-    grid-template-columns: repeat(15, 25px);
+    grid-template-rows: repeat(161, 25px);
+    grid-template-columns: repeat(16, 25px);
     border-radius: 5px;
 }
 
@@ -1319,17 +1335,23 @@ canvas
     border-radius: 0 0 5px 5px;
 }
 
-
-.palettes-header
+.colour-range-container
 {
-    grid-row: 141/143;
-    grid-column: 1/12;
+    padding: 0;
+    grid-row: 141/161;
+    grid-column: 1/16;
+    grid-template-rows: repeat(20, 25px);
+    grid-template-columns: repeat(16, 25px);
+}
+
+.palettes-section
+{
+    width: 54%;
 }
 
 .palettes-container
 {
-    grid-row: 143/194;
-    grid-column: 1/16;
+    width: 100%;
 }
 
 .palette
@@ -1361,9 +1383,14 @@ canvas
 {
     padding: 1.2rem;
     width: 100%;
-    grid-template-rows: repeat(184, 25px);
+    grid-template-rows: repeat(161, 25px);
     grid-template-columns: repeat(15, 25px);
     border-radius: 5px;
+}
+
+.palettes-section
+{
+    width: 100%;
 }
 }
 
